--- a/src/pages/Session.css
+++ b/src/pages/Session.css
@@ -57,3 +57,13 @@
   justify-content: center;
   align-items: center;
 }
+
+.MainSection {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.ChooserContent {
+  display: flex;
+}
