--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,11 @@
 .ant-form-item {
   margin-bottom: 0;
 }
+
+.ant-card-head-title {
+  padding: 0;
+  height: 57px;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
