--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -20,6 +20,12 @@
   align-items: center;
 }
 
+.Home .StartButton {
+  height: 54px;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+}
+
 .Home .SessionList {
   width: 100%;
   display: flex;
